--- a/docs/11_typescript/basic/quiz/1_todo/package.json
+++ b/docs/11_typescript/basic/quiz/1_todo/package.json
@@ -1,7 +1,6 @@
 {
   "name": "1_todo",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +18,159 @@
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^2.0.4",
     "typescript": "^3.8.3"
-  }
+  },
+  "dependencies": {
+    "acorn": "^7.1.1",
+    "acorn-jsx": "^5.2.0",
+    "ajv": "^6.12.6",
+    "ansi-escapes": "^4.3.1",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^3.2.1",
+    "argparse": "^1.0.10",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "astral-regex": "^1.0.0",
+    "brace-expansion": "^1.1.11",
+    "balanced-match": "^1.0.0",
+    "browserslist": "^4.16.6",
+    "callsites": "^3.1.0",
+    "chalk": "^2.4.2",
+    "chardet": "^0.7.0",
+    "cli-cursor": "^3.1.0",
+    "cli-width": "^2.2.0",
+    "color-convert": "^1.9.3",
+    "concat-map": "^0.0.1",
+    "color-name": "^1.1.3",
+    "colorette": "^1.2.2",
+    "convert-source-map": "^1.7.0",
+    "core-js-compat": "^3.6.4",
+    "cross-spawn": "^6.0.5",
+    "debug": "^4.1.1",
+    "deep-is": "^0.1.3",
+    "define-properties": "^1.1.3",
+    "doctrine": "^3.0.0",
+    "emoji-regex": "^8.0.0",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "eslint-utils": "^2.0.0",
+    "eslint-scope": "^5.0.0",
+    "espree": "^6.2.1",
+    "eslint-visitor-keys": "^1.1.0",
+    "estraverse": "^4.3.0",
+    "esquery": "^1.2.0",
+    "esprima": "^4.0.1",
+    "esrecurse": "^4.2.1",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.1",
+    "external-editor": "^3.1.0",
+    "fast-diff": "^1.2.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "figures": "^3.2.0",
+    "file-entry-cache": "^5.0.1",
+    "flat-cache": "^2.0.1",
+    "fs.realpath": "^1.0.0",
+    "flatted": "^2.0.2",
+    "functional-red-black-tree": "^1.0.1",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.1",
+    "has-flag": "^3.0.0",
+    "glob": "^7.1.6",
+    "glob-parent": "^5.1.2",
+    "globals": "^11.12.0",
+    "has-symbols": "^1.0.1",
+    "iconv-lite": "^0.4.24",
+    "ignore": "^4.0.6",
+    "imurmurhash": "^0.1.4",
+    "import-fresh": "^3.2.1",
+    "inflight": "^1.0.6",
+    "inquirer": "^7.1.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "invariant": "^2.2.4",
+    "inherits": "^2.0.4",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.1",
+    "is-promise": "^2.1.0",
+    "isexe": "^2.0.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.13.1",
+    "jsesc": "^2.5.2",
+    "json-schema-traverse": "^0.4.1",
+    "json5": "^2.1.3",
+    "leven": "^3.1.0",
+    "levenary": "^1.1.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "levn": "^0.3.0",
+    "loose-envify": "^1.4.0",
+    "lodash": "^4.17.21",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.6",
+    "mkdirp": "^0.5.5",
+    "mute-stream": "^0.0.8",
+    "ms": "^2.1.2",
+    "object.assign": "^4.1.0",
+    "nice-try": "^1.0.5",
+    "natural-compare": "^1.4.0",
+    "once": "^1.4.0",
+    "object-keys": "^1.1.1",
+    "onetime": "^5.1.0",
+    "os-tmpdir": "^1.0.2",
+    "optionator": "^0.8.3",
+    "parent-module": "^1.0.1",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^2.0.1",
+    "prelude-ls": "^1.1.2",
+    "prettier-linter-helpers": "^1.0.0",
+    "path-parse": "^1.0.7",
+    "private": "^0.1.8",
+    "regenerate": "^1.4.0",
+    "punycode": "^2.1.1",
+    "progress": "^2.0.3",
+    "regenerate-unicode-properties": "^8.2.0",
+    "regexpu-core": "^4.7.0",
+    "regexpp": "^3.1.0",
+    "regenerator-runtime": "^0.13.5",
+    "regenerator-transform": "^0.14.4",
+    "regjsgen": "^0.5.1",
+    "regjsparser": "^0.6.4",
+    "resolve-from": "^4.0.0",
+    "resolve": "^1.15.1",
+    "restore-cursor": "^3.1.0",
+    "rimraf": "^2.6.3",
+    "run-async": "^2.4.0",
+    "rxjs": "^6.5.5",
+    "safe-buffer": "^5.1.2",
+    "safer-buffer": "^2.1.2",
+    "shebang-command": "^1.2.0",
+    "semver": "^5.7.1",
+    "shebang-regex": "^1.0.0",
+    "source-map": "^0.5.7",
+    "signal-exit": "^3.0.3",
+    "slice-ansi": "^2.1.0",
+    "sprintf-js": "^1.0.3",
+    "strip-ansi": "^5.2.0",
+    "string-width": "^4.2.0",
+    "table": "^5.4.6",
+    "supports-color": "^5.5.0",
+    "text-table": "^0.2.0",
+    "strip-json-comments": "^3.1.0",
+    "through": "^2.3.8",
+    "tmp": "^0.0.33",
+    "to-fast-properties": "^2.0.0",
+    "tsutils": "^3.17.1",
+    "tslib": "^1.11.1",
+    "type-check": "^0.3.2",
+    "type-fest": "^0.8.1",
+    "unicode-match-property-value-ecmascript": "^1.2.0",
+    "unicode-canonical-property-names-ecmascript": "^1.0.4",
+    "unicode-match-property-ecmascript": "^1.0.4",
+    "unicode-property-aliases-ecmascript": "^1.1.0",
+    "uri-js": "^4.2.2",
+    "which": "^1.3.1",
+    "v8-compile-cache": "^2.1.0",
+    "wrappy": "^1.0.2",
+    "word-wrap": "^1.2.3",
+    "write": "^1.0.3"
+  },
+  "description": ""
 }
